<resources>
    <string name="app_name">Smart System_PITB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_home_n_alex">Welcome\nHome, Alex</string>
    <string name="rooms">Rooms</string>
    <string name="living_room">Living room</string>
    <string name="bedroom">Bedroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="bathroom">Bathroom</string>
    <string name="smart_system">Smart system</string>
    <string name="smart_systems">Smart systems</string>
    <string name="smart_tv">Smart TV</string>
    <string name="_2_active_devices">2 Active devices</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="_1_active_devices">1 Active devices</string>
    <string name="no_active_devices">No active devices</string>
    <string name="home">Home</string>
    <string name="welcom_to_second_fragment">Welcom to \nSecond Fragment</string>
    <string name="welcome_nsetting_alex">Welcome Setting Alex</string>
    <string name="welcome_group_alex">Welcome Group Alex</string>
    <string name="welcome_setting_alex">Welcome Setting Alex</string>
</resources>